[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aors = "0.4"
regex = "1.10"
hashbrown = "0.14"
itertools = "0.12"
num = "0.4"
phf = {version = "0.11", features = ["macros"]}